// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInputV2 should render correctly when input  has a error sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-1vzt1iy-sizeStyles {
  vertical-align: middle;
  fill: #b3144d;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-vdlwt8-StyledText {
  color: #b3144d;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rk:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="true"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="true"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rk:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-1vzt1iy-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M11 15H13V17H11V15ZM11 7H13V13H11V7ZM12 2C6.47 2 2 6.5 2 12C2 14.6522 3.05357 17.1957 4.92893 19.0711C5.85752 19.9997 6.95991 20.7362 8.17317 21.2388C9.38642 21.7413 10.6868 22 12 22C14.6522 22 17.1957 20.9464 19.0711 19.0711C20.9464 17.1957 22 14.6522 22 12C22 10.6868 21.7413 9.38642 21.2388 8.17317C20.7362 6.95991 19.9997 5.85752 19.0711 4.92893C18.1425 4.00035 17.0401 3.26375 15.8268 2.7612C14.6136 2.25866 13.3132 2 12 2ZM12 20C9.87827 20 7.84344 19.1571 6.34315 17.6569C4.84285 16.1566 4 14.1217 4 12C4 9.87827 4.84285 7.84344 6.34315 6.34315C7.84344 4.84285 9.87827 4 12 4C14.1217 4 16.1566 4.84285 17.6569 6.34315C19.1571 7.84344 20 9.87827 20 12C20 14.1217 19.1571 16.1566 17.6569 17.6569C16.1566 19.1571 14.1217 20 12 20Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-vdlwt8-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input has a success sentiment 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

.css-pgps27-Stack-StateStack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding: 0 16px;
}

.css-1gu5rzu-sizeStyles {
  vertical-align: middle;
  fill: #22674e;
  height: 16px;
  width: 16px;
  min-width: 16px;
  min-height: 16px;
}

.css-1n7fwv3-StyledText {
  color: #22674e;
  font-size: 12px;
  font-family: Inter,Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 16px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rg:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="true"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rg:"
          type="text"
          value="test"
        />
        <div
          class="css-pgps27-Stack-StateStack e7tir8v4"
        >
          <svg
            class="css-1gu5rzu-sizeStyles e1gt4cfo0"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,2A10,10 0 0,1 22,12A10,10 0 0,1 12,22A10,10 0 0,1 2,12A10,10 0 0,1 12,2M12,4A8,8 0 0,0 4,12A8,8 0 0,0 12,20A8,8 0 0,0 20,12A8,8 0 0,0 12,4M11,16.5L6.5,12L7.91,10.59L11,13.67L16.59,8.09L18,9.5L11,16.5Z"
            />
          </svg>
        </div>
      </div>
    </div>
    <p
      class="css-1n7fwv3-StyledText e13y3mga0"
    >
      success
    </p>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is disabled 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":ra:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="true"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          disabled=""
          id=":ra:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly when input is readOnly 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":rd:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="true"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":rd:"
          readonly=""
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`TextInputV2 should render correctly with basic props 1`] = `
<DocumentFragment>
  .css-ymc80m-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: normal;
  -webkit-box-align: normal;
  -ms-flex-align: normal;
  align-items: normal;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-irytw7-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-135dzb3-Stack {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 4px;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  -webkit-box-pack: normal;
  -ms-flex-pack: normal;
  -webkit-justify-content: normal;
  justify-content: normal;
  -webkit-box-flex-wrap: nowrap;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
}

.css-4gfeok-StyledText {
  color: #3f4250;
  font-size: 16px;
  font-family: Inter,Asap;
  font-weight: 500;
  letter-spacing: 0;
  line-height: 24px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.css-1ofx5pr-StyledInputWrapper {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: 48px;
  background: #ffffff;
  border: 1px solid #d9dadd;
  border-radius: 4px;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1 {
  color: #3f4250;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-webkit-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::-moz-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1:-ms-input-placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper>.e7tir8v1::placeholder {
  color: #727683;
}

.css-1ofx5pr-StyledInputWrapper[data-success='true'] {
  border-color: #22674e;
}

.css-1ofx5pr-StyledInputWrapper[data-error='true'] {
  border-color: #b3144d;
}

.css-1ofx5pr-StyledInputWrapper[data-readOnly='true'] {
  background: #f9f9fa;
  border-color: #d9dadd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true'] {
  background: #f3f3f4;
  border-color: #e9eaeb;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1 {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-webkit-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::-moz-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1:-ms-input-placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper[data-disabled='true']>.e7tir8v1::placeholder {
  color: #b5b7bd;
}

.css-1ofx5pr-StyledInputWrapper:not([data-disabled='true']):not([data-readOnly]):hover {
  border-color: #8c40ef;
}

.css-137prd4-StyledInput {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  border: none;
  outline: none;
  height: 100%;
  padding-left: 16px;
  background: transparent;
}

<div
    class="css-ymc80m-Stack ehpbis70"
  >
    <div
      class="css-irytw7-Stack ehpbis70"
    >
      <div
        class="css-135dzb3-Stack ehpbis70"
      >
        <label
          class="css-4gfeok-StyledText e13y3mga0"
          for=":r0:"
        >
          Test
        </label>
      </div>
    </div>
    <div>
      <div
        class="css-1ofx5pr-StyledInputWrapper e7tir8v0"
        data-disabled="false"
        data-error="false"
        data-readonly="false"
        data-success="false"
      >
        <input
          aria-invalid="false"
          class="css-137prd4-StyledInput e7tir8v1"
          id=":r0:"
          type="text"
          value="test"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;
